[package]
name = "pingora-memory-cache"
version = "0.7.2"
authors = ["Yuchen Wu <yuchen@cloudflare.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/cloudflare/pingora"
categories = ["algorithms", "caching"]
keywords = ["async", "cache", "pingora"]
description = """
An async in-memory cache with cache stampede protection.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pingora_memory_cache"
path = "src/lib.rs"

[dependencies]
TinyUFO = { version = "0.7.2", registry = "gitea", path = "../tinyufo" }
ahash = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
pingora-error = { version = "0.7.2", registry = "gitea", path = "../pingora-error" }
log = { workspace = true }
parking_lot = "0"
pingora-timeout = { version = "0.7.2", registry = "gitea", path = "../pingora-timeout" }

[dev-dependencies]
once_cell = { workspace = true }
